# stm32c0

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  stm32c0.code-workspace
CMSIS/: Readme.md
adc_single_sw/: CMakeLists.txt
adc_single_sw/Src/: main.c
blinky/: CMakeLists.txt  Readme.txt
blinky/Src/: main.c
blinky2/: CMakeLists.txt  Readme.md
blinky2/Src/: main.c
cmake/: gcc-arm-none-eabi.cmake  toolchain-arm-none-eabi.cmake  toolchain-gcc-arm-none-eabi.cmake
common/: Readme.md
common/Inc/: gpio.h
common/Src/: gpio.c
crc/: CMakeLists.txt  Readme.md
crc/Src/: main.c
demos/: exti_button.c  gpio_blinky.c  gpio_debouncing.c  i2c_master_rx_tx.c  mpu.c  rcc_sysclk.c  spi_master_rx_tx.c  systick.c  tim_pwm_out.c  tim_upcount.c  usart_echo.c  usart_printf.c  usart_rx_irq.c
demos/adc_multi_dma/: CMakeLists.txt  Readme.md
demos/adc_multi_dma/Src/: main.c
demos/adc_single_sw/: Readme.md
demos/dma_mem2uart/: CMakeLists.txt
demos/exti_button/: CMakeLists.txt  Readme.md
demos/exti_button/Src/: main.c
demos/flash_boot_counter/: CMakeLists.txt  stm32c011f6ux_FLASH.ld
demos/flash_boot_counter/Src/: main.c
demos/gpio_blinky/: main.c
demos/gpio_debouncing/: CMakeLists.txt  Readme.md
demos/mpu/: CMakeLists.txt  Readme.md
demos/rcc_sysclk/: CMakeLists.txt  Readme.md
demos/rcc_sysclk/Src/: main.c
demos/standby_iwdg/: CMakeLists.txt
demos/stop_uart/: CMakeLists.txt  Readme.md
demos/systick/: CMakeLists.txt
demos/tim_upcount/: stm32c011f6ux_FLASH.ld
demos/usart_echo/: CMakeCache.txt  CMakeLists.txt  Readme.md  build.ninja  cmake_install.cmake
demos/usart_printf/: CMakeLists.txt  Readme.md
demos/usart_rx_irq/: CMakeLists.txt  Readme.md
dma_mem2mem/: CMakeLists.txt  Readme.md
dma_mem2mem/Src/: main.c
dma_mem2uart/: CMakeLists.txt
docs/: Readme.md  STM32C0 Register-Level Guide.docx
exti_button/: CMakeLists.txt
exti_button/Src/: main.c
exti_button/Startup/: startup_stm32c011f6ux.s
flash/: CMakeLists.txt
flash/Src/: main.c
gpio_blinky/: CMakeLists.txt
gpio_blinky/Src/: main.c
mpu/Src/: main.c
rtc_alarm_irq/: CMakeLists.txt  Readme.md
rtc_alarm_irq/Src/: main.c
standby_iwdg/: CMakeLists.txt  Readme.md
standby_iwdg/Src/: main.c
stop_rtc_alarm/: CMakeLists.txt  Readme.md
stop_rtc_alarm/Src/: main.c
stop_uart/: CMakeLists.txt
stop_uart/Src/: main.c
systick/: CMakeLists.txt  Readme.md
tim_pwm_out/: CMakeLists.txt  Readme.md
tim_pwm_out/Src/: main.c
tim_upcount/: CMakeLists.txt  Readme.md
usart_echo/: CMakeLists.txt
usart_echo/Src/: main.c
usart_printf/: CMakeLists.txt
usart_printf/Src/: main.c
usart_rx_dma_idle_irq/: CMakeLists.txt  Readme.md
usart_rx_dma_idle_irq/Src/: main.c
usart_rx_dma_idle_irq/cmake/: vscode_generated.cmake
usart_rx_irq/: CMakeLists.txt
usart_rx_irq/Src/: main.c
